# VegetationTool

./: .gitignore  CMakeLists.txt  README.md  build.bat  vcpkg.json
assets/: app.rc
docs/: FREEHAND_DESIGN.md  PYTHON_API.md  UE_NANITE_ASSEMBLY_USD_DESIGN.md  UE_PVE_BRIDGE_DESIGN.md  api.html  index.html
mcp/: slowtree_mcp.py
samples/: Sample.vtree  ai_conifer.vtree
src/: main.cpp
src/api/: ApiServer.cpp  ApiServer.h
src/app/: Application.cpp  Application.h
src/generator/: CylinderSegment.cpp  CylinderSegment.h  LuaEngine.cpp  LuaEngine.h  TreeGenerator.cpp  TreeGenerator.h
src/graph/: NodeGraph.cpp  NodeGraph.h  NodeTypes.h  Nodes.cpp  Nodes.h
src/io/: MeshImport.cpp  MeshImport.h  ProjectIO.cpp  ProjectIO.h  UsdExport.cpp
src/renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  stb_impl.cpp
src/shaders/: bone.vert  branch.frag  branch.vert  depth.frag  depth.vert  fullscreen.vert  fxaa.frag  grid.vert  ground.frag  ground.vert  leaf.frag  leaf.vert  leaf_inst.vert  outline.frag  outline.vert  present.frag  sky.frag  sky.vert  taa.frag
src/ui/: LeafCutoutEditor.cpp  LeafCutoutEditor.h  NodeEditorPanel.cpp  NodeEditorPanel.h  PropertyPanel.cpp  PropertyPanel.h  UIManager.cpp  UIManager.h  ViewportPanel.cpp  ViewportPanel.h
tools/: make_icon.py
